HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignmentProvenanceEscape/Source/Main.uv
//! Rejected statement specimen for assignment provenance escape diagnostics.

public procedure assignmentProvenanceEscapeReference() -> i32 {
    var escaped: i32 = 0
    region {
        escaped = ^1
    }
    return escaped
}
